2003-03-19  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/glib2.def: Add a file

2003-03-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbglib_messages.c: change rbglib_log_handler_procs to static
	variable.

2003-03-12  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbglib_convert.c: implement
	- uri = GLib.filename_to_uri(filename[, hostname])
	- filename, hostname = GLib.filename_from_uri(uri)

2003-03-07  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgutil.h: #include rbglib.h for RUBY_GLIB2_VAR.

	* src/rbglib.h, rbgutil.h: define RUBY_GLIB2_VAR macro, and
	use RUBY_GLIB2_VAR for defining 'exported' variables.

	* extconf.rb: append "-DRUBY_GLIB2_COMPILATION" to $defs.

2003-02-20  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Check NODE_ATTRASGN only if try_compile is defined.

2003-02-17  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobject.h: Add rbgobj_signal_wrap() declaration.

	* src/rbgobject.h, src/global.h: Move declaration of
	rbgobj_define_property_accessors() from rbgobject.h to global.h

	* src/rbgobject.h: Remove rbgobj_define_signal_constants() declaration.
	This function no longer exists.

2003-02-16  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb, src/rbgutil.c:
	Check whether NODE_ATTRASGN is used in ruby. If NODE_ATTRASGN is
	used, G_DEF_SETTERS uses alias_method instead of generating wrapper
	methods.
	Patch from Nobuyoshi Nakada <nobu.nokada@softhome.net>

	* src/rbgobject.c (rbgobj_define_property_accessors): ditto

2003-02-15  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobject.c: make id_relatives be static variable.

2003-02-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbglib.c, src/rbgutil.[ch]: code cleanups

	* src/rbgobj_boxed.c: make some functions to be static.

	* src/rbgobj_boxed.c: implement GLib::Boxed#{copy,clone}
	Suggested by KATO Kazuyoshi <kadu@zb.wakwak.com>

2003-02-13  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
